# axiom

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: addendum.md  architecture.md  errors.md  optimizations.md  spec.md  summary.md  ui.md
plans/: implementation-roadmap.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: documents.rs  mod.rs  relationships.rs  search.rs  system.rs
src-tauri/src/core/: app_state.rs  document.rs  errors.rs  metadata.rs  mod.rs  relationship.rs
src-tauri/src/db/: mod.rs  surreal_db.rs
src-tauri/src/fs/: file_manager.rs  mod.rs  watcher.rs
src-tauri/src/ml/: mod.rs  onnx_engine.rs
src-tauri/src/search/: mod.rs  tantivy_engine.rs
src/components/: CommandPalette.tsx  EditorPanel.tsx  LibraryPanel.tsx  MarkdownPreview.tsx  MilkdownEditor.tsx  OrchestrationPanel.tsx  Toast.tsx
src/components/ui/: ConfirmDialog.tsx  Select.tsx  Tooltip.tsx  index.ts
src/stores/: appStore.ts
src/types/: document.ts
src/utils/: debounce.ts
